# ai-frontier-tracker

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  ai_frontier_tracker.html  docker-compose.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: __init__.py  config.py  database.py  main.py  models.py
app/fetchers/: __init__.py  arxiv.py  base.py  firecrawl.py  github.py  hackernews.py  huggingface.py  lobsters.py  reddit.py  registry.py  rss.py
app/services/: cache.py  collector.py  firecrawl.py  http_client.py  industry_scorer.py  llm_summary.py  paper_extractor.py  scheduler.py  signal_analytics.py  weekly_digest.py
app/utils/: bloom.py  crawl_quality.py  dedup_urls.py  entity_dict.py  etag_cache.py  feed_insights.py  heat.py  text.py  text_analysis.py
docs/: ARCHITECTURE.md
static/: index.html
tests/: test_arxiv.py  test_fetch_summary.py
